# mc2-serialization

./: CMakeLists.txt  README.md
src/: serialization.cpp  serialization.h
src/flatbuffers/: SignedKey.fbs
